# spell

./: corpus.txt  spell.cabal
lib/Data/: Trie.hs
lib/Data/Trie/: Internal.hs  Pretty.hs
lib/Spell/: Confusion.hs  Edit.hs
src/: Compile.hs  Spell.hs
test/: Main.hs
test/Data/Trie/: Test.hs
test/Spell/: Test.hs
