name:                spell
version:             0.1.0.0
author:              Stefan Haller
maintainer:          haliner@gmail.com
copyright:           (c) 2014 Stefan Haller
license:             MIT
build-type:          Simple
cabal-version:       >=1.10


library
    build-depends:
        array        == 0.5.*,
        base         == 4.7.*,
        binary       == 0.7.*,
        containers   == 0.5.*,
        ListLike     == 4.1.*,
        pqueue       == 1.2.*,
        text         == 1.1.*,
        transformers == 0.4.*,
        vector       == 0.10.*

    hs-source-dirs:
        lib

    exposed-modules:
        Data.Trie
        Data.Trie.Internal
        Data.Trie.Pretty
        Spell.Confusion
        Spell.Edit

    default-language:
        Haskell2010


executable spell
    build-depends:
        base                 == 4.7.*,
        binary               == 0.7.*,
        bytestring           == 0.10.*,
        ListLike             == 4.1.*,
        optparse-applicative == 0.9.*,
        pqueue               == 1.2.*,
        spell                == 0.1.*,
        text                 == 1.1.*,
        vector               == 0.10.*,
        zlib                 == 0.5.*

    hs-source-dirs:
        src

    main-is:
        Spell.hs

    default-language:
        Haskell2010


executable spell-compile
    build-depends:
        base                 == 4.7.*,
        binary               == 0.7.*,
        bytestring           == 0.10.*,
        ListLike             == 4.1.*,
        optparse-applicative == 0.9.*,
        spell                == 0.1.*,
        text                 == 1.1.*,
        zlib                 == 0.5.*

    hs-source-dirs:
        src

    main-is:
        Compile.hs

    default-language:
        Haskell2010
